--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
     "framer-motion": "^11.9.0",
+    "fushion_ai_data": "file:",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
