--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fushion_ai_data": "file:",
     "next": "14.2.13",
     "nodemailer": "^6.9.16",
+    "pg": "^8.13.1",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
