--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.9.0",
     "fushion_ai_data": "file:",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.13",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
@@ -21,6 +23,8 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
