--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@reduxjs/toolkit": "^2.4.0",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.9.0",
     "fushion_ai_data": "file:",
@@ -19,7 +20,9 @@
     "pg": "^8.13.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
