--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pg": "^8.13.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-export-table-to-excel": "^1.0.6",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
