Add rss-parser dependency and implement news feed fetching in About Us page

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
+    "rss-parser": "^3.13.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
