--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.9.0",
     "fushion_ai_data": "file:",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.468.0",
     "next": "14.2.13",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
