--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.8",
     "@reduxjs/toolkit": "^2.4.0",
     "bcrypt": "^5.1.1",
+    "cookies-next": "^4.3.0",
     "framer-motion": "^11.9.0",
     "fushion_ai_data": "file:",
     "jsonwebtoken": "^9.0.2",
