--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.468.0",
     "next": "14.2.13",
+    "next-intl": "^3.26.3",
+    "next-translate": "^2.6.2",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "react": "^18",
